tests/transpiler/x/zig/exists_builtin.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:13:9: error: local variable is never mutated
    var tmp = arr.toOwnedSlice() catch unreachable;
        ^~~
/workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:13:9: note: consider using 'const'
/workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/mem.zig:1076:21: error: invalid type given to std.mem.len: []i64
            else => @compileError("invalid type given to std.mem.len: " ++ @typeName(@TypeOf(value))),
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    main: /workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:6:29
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=6' to see all references
/workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:16:15: error: root source file struct 'Io' has no member named 'getStdOut'
    try std.io.getStdOut().writer().print("{any}\n", .{flag});
        ~~~~~~^~~~~~~~~~
/workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/Io.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
